# libprocman

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  tests.cpp
.github/workflows/: windows-tests.yml
include/: procman.cpp  procman.hpp
